# actx_dgfem_suite

./: .gitignore  .gitmodules  .test-conda-env.yml  README.md  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
actx_dgfem_suite/: __init__.py  arraycontext.py  consts.py  download_pickled_files.py  measure.py  perf_analysis.py  print_ngflops.py  print_roofline.py  rhs_builder.py  run.py  utils.py  wave_dof_scaling.py
actx_dgfem_suite/arraycontext/: __init__.py  _loop_nest_utils.py  batched_derivative_einsum_transforms.py  batched_divergence_einsum_transforms.py  batched_einsum_loop_transforms.py  batched_facemass_einsum_transforms.py  constants_folder.py  deduplicate_by_value.py  dgfem_optimizer.py  dgfem_optimizer_freeze_actx.py  disjoint_loop_nest_barriers.py  distribute_operands_of_mass_einsum.py  euler_facemass.py  evaluate_pt_exprs_using_pyopencl.py  kennedy_loop_fusion.py  mass_inverse_fuser.py  materialization_policy.py  metadata.py  no_fusion_actx.py  push_einsum_indices.py  split_iteration_domains.py  transpose_consts_in_einsums.py  try_cse.py  try_cse2.py
actx_dgfem_suite/codegen/: __init__.py  pytato_target.py
actx_dgfem_suite/equations/: cns.py  euler.py  maxwell.py  wave.py
actx_dgfem_suite/run/: __main__.py
actx_dgfem_suite/suite/euler_3D_P1/: main.py  (+3 more)
actx_dgfem_suite/suite_generators/: __main__.py  cns.py  euler.py  maxwell.py  wave.py
actx_dgfem_suite/tools/: download_pickled_files.py  print_ngflops.py  print_roofline.py  wave_dof_scaling.py
assets/: h200nvl.patch  titan_v.patch
test/: test_dgfem_opt_freeze.py  test_generate.py
(+217 files in other folders)
