[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "actx_dgfem_suite"
version = "2026.1"
description = "A suite of DG-FEM operator benchmarks for arraycontext."
authors = [
    { name = "Kaushik Kulkarni", email = "kaushikcfd@gmail.com" },
]
license = { file = "LICENSE.txt" }
readme = "README.md"
urls = { Homepage = "https://github.com/kaushikcfd/actx_dgfem_suite/" }
requires-python = ">=3.12"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "arraycontext",
    "feinsum",
    "grudge",
    "loopy",
    "meshmode",
    "pyopencl",
    "pytato",
]


[tool.ruff]
preview = true
line-length = 85
exclude = [
    "actx_dgfem_suite/suite_generators/cns.py" # pulls lots of deps (mirgecom, etc.) -> better to just avoid it
]

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "C",   # flake8-comprehensions
  "E",   # pycodestyle
  "F",   # pyflakes

  "I",   # flake8-isort

  "N",   # pep8-naming
  "NPY", # numpy
  "Q",   # flake8-quotes
  "W",   # pycodestyle

  "UP",  # pyupgrade
  "RUF",  # ruff
  "FA",
  "TC",
]

ignore = ["RUF052", "RUF067", "B023", "C901", "N806"]

[tool.black]
line-length = 85
